# Electric-racing-car

./: .gitignore  CMakeLists.txt  README.md  chen  chen.pub  main.cpp
QRcode_detector/: CMakeLists.txt  QRcode.cpp  QRcode.h
detector_numbers/: CMakeLists.txt  detector_num.cpp  detector_num.h
serial_port/: CMakeLists.txt  serial.cpp  serial.h
tracking_module/: CMakeLists.txt  tracking_module.cpp  tracking_module.h
